<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_EpicsMotorCmd" Id="{6aeca57a-6008-439f-9ea1-66c05e3b253c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_EpicsMotorCmd :
    // Defines valid EPICS commands for nCommand
(
    JOG := 0,
    MOVE_VELOCITY := 1,
    MOVE_RELATIVE := 2,
    MOVE_ABSOLUTE := 3,
    MOVE_MODULO := 4,
    HOME := 10,
    GEAR := 30
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>