<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_MoveState" Id="{933b85d6-53dd-4c3d-b3b1-3a89b00aa8fa}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_MoveState :
(
    IDLING:=0,
    INIT:=10,
    STARTED:=20,
    IN_PROGRESS :=30,
    REACHED:=40,
    INTERRUPTED:=50,
    DONE:=60,
    ERROR:=-99
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>